--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^5.2.1",
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-toggle": "^1.1.9",
     "@reduxjs/toolkit": "^2.8.2",
     "@supabase/supabase-js": "^2.53.0",
     "@tailwindcss/vite": "^4.1.11",
@@ -28,6 +30,7 @@
     "react-router-dom": "^7.7.1",
     "sweetalert2": "^11.22.2",
     "tailwind-merge": "^3.3.1",
+    "tailwind-variants": "^2.1.0",
     "tailwindcss": "^4.1.11",
     "zod": "^4.0.14"
   },
