--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,33 @@ Thumbs.db
 *.njsproj
 *.sln
 *.sw?
+
+# Entorno Virtual de Python
+/.venv
+__pycache__/
+*.pyc
+
+# Archivos de Sistema Operativo
+.DS_Store
+Thumbs.db
+
+# Byte-code files
+__pycache__/
+*.pyc
+
+# Virtual environments
+.venv/
+venv/
+env/
+
+# IDE-specific files
+.vscode/
+.idea/
+
+# Build artifacts
+dist/
+build/
+*.egg-info/
+
+# Log files
+*.log
