--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-hot-toast": "^2.5.2",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.7.1",
+    "recharts": "^3.2.1",
     "sweetalert2": "^11.22.2",
     "tailwind-merge": "^3.3.1",
     "tailwind-variants": "^2.1.0",
