--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "gym-app",
   "private": true,
@@ -5,9 +6,11 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "vite build",             
+    "build:ci": "tsc -b && vite build", 
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "typecheck": "tsc -b"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
