--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "gym-app",
   "private": true,
@@ -6,8 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",             
-    "build:ci": "tsc -b && vite build", 
+    "build": "vite build",
+    "build:ci": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
     "typecheck": "tsc -b"
@@ -31,6 +30,7 @@
     "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-toggle": "^1.1.9",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@reduxjs/toolkit": "^2.8.2",
     "@supabase/supabase-js": "^2.53.0",
     "@tailwindcss/vite": "^4.1.11",
